--- a/Lap1/vuln/source/index.html
+++ b/Lap1/vuln/source/index.html
@@ -151,5 +151,19 @@
   <footer>
     <p>&copy; 2024 Shopping Clothes. All rights reserved.</p>
   </footer>
+  <script>
+    function redirectToFullImage(id) {
+      var url = "https://localhost:1800/id=" + id; 
+      window.location.href = url;
+    }
+    window.onload = function() {
+      var images = document.querySelectorAll('.product-image');
+      images.forEach(function(image, index) {
+        image.onclick = function() {
+          redirectToFullImage(index + 1);
+        };
+      });
+    };
+  </script>
 </body>
 </html>
