--- a/Lap1/vuln/source/index.html
+++ b/Lap1/vuln/source/index.html
@@ -72,11 +72,11 @@
   </header>
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Men's Clothing</a></li>
-      <li><a href="#">Women's Clothing</a></li>
-      <li><a href="#">Kids' Clothing</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="">Home</a></li>
+      <li><a href="">Men's Clothing</a></li>
+      <li><a href="">Women's Clothing</a></li>
+      <li><a href="">Kids' Clothing</a></li>
+      <li><a href="">Login</a></li>
     </ul>
   </nav>
   <main>
